--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "repository": "git@github.com:Uninen/garmin-connect-to-json.git",
   "author": "Ville Säävuori <ville@unessa.net>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc src/index.ts --strict --module node16 --outDir bin"
+  },
   "dependencies": {
     "app-root-path": "^3.0.0",
     "commander": "^9.3.0",
@@ -32,6 +35,7 @@
   },
   "homepage": "https://github.com/Uninen/garmin-connect-to-json",
   "devDependencies": {
-    "@types/node": "^18.0.0"
+    "@types/node": "^18.0.0",
+    "typescript": "^4.7.4"
   }
 }
