--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "Ville Säävuori <ville@unessa.net>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "clean": "rm -rf build",
+    "buildt": "tsc",
+    "build": "rollup -c",
+    "dev": "tsx src/index.ts --debug"
   },
   "dependencies": {
     "app-root-path": "^3.0.0",
@@ -36,7 +39,12 @@
   },
   "homepage": "https://github.com/Uninen/garmin-connect-to-json",
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@types/node": "^18.0.0",
+    "rollup": "^2.75.6",
+    "tslib": "^2.4.0",
+    "tsx": "^3.4.3",
     "typescript": "^4.7.4"
   }
 }
