--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "repository": "git@github.com:Uninen/garmin-connect-to-json.git",
   "author": "Ville Säävuori <ville@unessa.net>",
   "license": "MIT",
+  "scripts": {
+    "clean": "rm -rf build",
+    "build": "rollup -c",
+    "dev": "tsx src/index.ts --debug"
+  },
   "dependencies": {
     "app-root-path": "^3.0.0",
-    "commander": "^6.2.1",
+    "commander": "^9.3.0",
     "dayjs": "^1.11.3",
     "dotenv": "^16.0.1",
     "path": "^0.12.7",
@@ -30,5 +35,14 @@
   "bugs": {
     "url": "https://github.com/Uninen/garmin-connect-to-json/issues"
   },
-  "homepage": "https://github.com/Uninen/garmin-connect-to-json"
+  "homepage": "https://github.com/Uninen/garmin-connect-to-json",
+  "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "@types/node": "^18.0.0",
+    "rollup": "^2.75.6",
+    "tslib": "^2.4.0",
+    "tsx": "^3.4.3",
+    "typescript": "^4.7.4"
+  }
 }
