--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.3.3",
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-security": "^1.5.0",
     "rollup": "^2.75.6",
     "tslib": "^2.4.0",
     "tsx": "^3.4.3",
