--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "homepage": "https://github.com/Uninen/garmin-connect-to-json",
   "devDependencies": {
+    "@playwright/test": "^1.22.2",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-typescript": "8.3.3",
     "@types/node": "18.0.0",
@@ -50,6 +51,7 @@
     "eslint-plugin-security": "1.5.0",
     "jsdom": "^20.0.0",
     "msw": "^0.42.1",
+    "playwright-request-mocker": "^0.3.0",
     "rollup": "2.75.6",
     "tslib": "2.4.0",
     "tsx": "3.4.3",
