Feat: add tests (#7)

--- a/package.json
+++ b/package.json
@@ -12,16 +12,9 @@
   "scripts": {
     "clean": "rm -rf build",
     "build": "rollup -c",
-    "dev": "tsx src/index.ts --debug"
-  },
-  "dependencies": {
-    "app-root-path": "^3.0.0",
-    "commander": "^9.3.0",
-    "dayjs": "^1.11.3",
-    "dotenv": "^16.0.1",
-    "path": "^0.12.7",
-    "playwright-chromium": "^1.22.2",
-    "rambda": "^7.1.4"
+    "dev": "tsx src/index.ts --debug",
+    "test": "vitest",
+    "test:ci": "vitest"
   },
   "files": [
     "bin/index.js",
@@ -37,7 +30,17 @@
     "url": "https://github.com/Uninen/garmin-connect-to-json/issues"
   },
   "homepage": "https://github.com/Uninen/garmin-connect-to-json",
+  "dependencies": {
+    "app-root-path": "^3.0.0",
+    "commander": "^9.3.0",
+    "dayjs": "^1.11.3",
+    "dotenv": "^16.0.1",
+    "path": "^0.12.7",
+    "playwright-chromium": "^1.22.2",
+    "rambda": "^7.1.4"
+  },
   "devDependencies": {
+    "@playwright/test": "^1.22.2",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-typescript": "8.3.3",
     "@types/node": "18.0.0",
@@ -46,9 +49,12 @@
     "eslint": "8.18.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-security": "1.5.0",
+    "msw": "^0.42.1",
+    "playwright-request-mocker": "^0.3.0",
     "rollup": "2.75.6",
     "tslib": "2.4.0",
     "tsx": "3.4.3",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "vitest": "^0.15.1"
   }
 }
