--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "pnpm run typecheck && rollup -c --bundleConfigAsCjs",
     "typecheck": "tsc --noEmit",
     "dev": "GARMIN_CONNECT_DEBUG=1 tsx src/index.ts",
-    "bdev": "GARMIN_CONNECT_DEBUG=1 node bin/index.js",
+    "bdev": "pnpm run build && GARMIN_CONNECT_DEBUG=1 node bin/index.js",
     "test": "vitest",
     "test:ci": "vitest"
   },
@@ -37,6 +37,7 @@
     "commander": "9.4.1",
     "dayjs": "1.11.5",
     "dotenv": "16.0.3",
+    "node-stream-zip": "^1.15.0",
     "path": "0.12.7",
     "playwright-chromium": "1.26.1",
     "rambda": "7.3.0"
@@ -52,6 +53,7 @@
     "eslint": "8.25.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-security": "1.5.0",
+    "playwright-firefox": "^1.27.1",
     "rollup": "3.2.3",
     "tsx": "3.10.3",
     "typescript": "4.8.4",
