chore: bump deps

--- a/package.json
+++ b/package.json
@@ -33,27 +33,31 @@
   "homepage": "https://github.com/Uninen/garmin-connect-to-json",
   "dependencies": {
     "app-root-path": "3.1.0",
-    "commander": "9.4.1",
-    "dayjs": "1.11.5",
-    "dotenv": "16.0.3",
+    "commander": "11.1.0",
+    "dayjs": "1.11.10",
+    "dotenv": "16.3.1",
     "path": "0.12.7",
-    "playwright-chromium": "1.26.1",
-    "rambda": "7.3.0"
+    "playwright-chromium": "1.40.1",
+    "rambda": "8.6.0"
   },
   "devDependencies": {
-    "@playwright/test": "1.26.1",
-    "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-typescript": "8.5.0",
-    "@tsconfig/node16": "^1.0.3",
-    "@types/node": "18.8.2",
-    "@typescript-eslint/eslint-plugin": "5.39.0",
-    "@typescript-eslint/parser": "5.39.0",
-    "eslint": "8.24.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-security": "1.5.0",
-    "rollup": "2.79.1",
-    "tsx": "3.9.0",
-    "typescript": "4.8.4",
-    "vitest": "0.23.4"
+    "@playwright/test": "1.40.1",
+    "@rollup/plugin-json": "6.1.0",
+    "@rollup/plugin-typescript": "11.1.5",
+    "@tsconfig/node20": "20.1.2",
+    "@types/node": "20.10.6",
+    "@typescript-eslint/eslint-plugin": "6.16.0",
+    "@typescript-eslint/parser": "6.16.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-security": "2.1.0",
+    "playwright": "^1.40.1",
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "rollup": "4.9.2",
+    "tslib": "^2.6.2",
+    "tsx": "4.7.0",
+    "typescript": "5.3.3",
+    "vitest": "1.1.1"
   }
 }
